canadensis_dsdl_frontend/tests/compile_fail/extent_not_multiple_of_8_bits/canadensis/ExtentNotMultipleOf8Bits.1.0.uavcan

# Extent must be a multiple of 8 bits
@extent 7
